<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="#12166c"
        android:text="@string/hlp_title0"
        android:id="@id/title"
        />
    <ScrollView
        android:layout_column="0"
        android:layout_row="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/hlp_title1"
                android:textColor="#12166c"
                android:layout_column="0"
                android:layout_row="1"
                android:paddingBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pantalla_inicial_text"
                android:layout_column="0"
                android:layout_row="2"
                android:paddingBottom="24dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/hlp_title2"
                android:textColor="#12166c"
                android:layout_column="0"
                android:layout_row="3"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cerca_prota_string_text"
                android:layout_column="0"
                android:layout_row="4"
                android:paddingBottom="24dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#12166c"
                android:text="@string/hlp_title3"
                android:layout_column="0"
                android:layout_row="5"
                android:paddingBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pelis_any_text"
                android:layout_column="0"
                android:layout_row="6"
                android:paddingBottom="24dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#12166c"
                android:text="@string/hlp_title4"
                android:layout_column="0"
                android:layout_row="7"
                android:paddingBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/afegir_peli_text"
                android:layout_column="0"
                android:layout_row="8"
                android:paddingBottom="24dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#12166c"
                android:text="@string/hlp_title5"
                android:layout_column="0"
                android:layout_row="9"
                android:paddingBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eliminar_peli_text"
                android:layout_column="0"
                android:layout_row="10"
                android:paddingBottom="24dp" />
        </GridLayout>
    </ScrollView>
</GridLayout>